--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 	},
 	"require": {
 		"php": ">=5.3.7",
-		"illuminate/database": "^5.5"
+		"illuminate/database": "^5.5",
+		"swiftmailer/swiftmailer": "^6.0"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
