--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 	"require": {
 		"php": ">=5.3.7",
 		"illuminate/database": "^5.5",
-		"swiftmailer/swiftmailer": "^6.0"
+		"swiftmailer/swiftmailer": "^6.0",
+		"mpdf/mpdf": "^7.0"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
